@@ -35,7 +35,7 @@ public class FrontController extends HttpServlet {
             if (key.compare(urlkey)==0) {
                 Mapping map= this.urlMap.get(key);
                 out.print("L'url : "+ urlkey +" est associé à la methode "+map.getMethodName()+"dans la class "+map.getClassName()+"\n");
-                out.print("l'output : "+executeMethode(map));
+                out.print("l'output : "+executeMethode(map,out,request,response));
                 check=1;
             }
         }
@@ -43,13 +43,31 @@ public class FrontController extends HttpServlet {
                 out.print("L'url : "+ urlkey +" n'est pas associé à une methode dans une classe annotée controller \n");
         }
     }
-    public static String executeMethode(Mapping map) throws Exception{
+    public static void executeMethode(Mapping map,PrintWriter out,HttpServletRequest req, HttpServletResponse res) throws Exception{
         String clname=map.getClassName();
         String mthname=map.getMethodName();
         Class<?> cl=Class.forName(clname);
         Method mth=cl.getDeclaredMethod(mthname);
-        Object classrep=cl.newInstance();
-        Object rep=mth.invoke(classrep);
-        return (String)rep;
+        Object classrep=cl.getDeclaredConstructor().newInstance();
+        Object obj=mth.invoke(classrep);
+         if(obj instanceof String){
+            out.print((String)obj);
+        }
+        else if(obj instanceof ModelView){
+            ModelView modelV = (ModelView)obj;
+            Map<String,Object>map = modelV.getData();
+            RequestDispatcher dispat = req.getRequestDispatcher(modelV.getViewUrl());
+            for(Map.Entry<String,Object> entry : map.entrySet()){
+                String dataName = (String)entry.getKey();
+                Object data = entry.getValue();
+                req.setAttribute(dataName,data);
+            }
+            dispat.forward(req,res);
+        } 
+        else{
+            String resultType = obj.getClass().getSimpleName();
+            throw new Exception("Execution impossible pour le type de retour : "+resultType);
+        }
+
     }
 }
